--- a/study.ipynb
+++ b/study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -21,8 +21,8 @@
       "Имя: Some \n",
       "Фамилия: Buddy \n",
       "Средняя оценка за лекции: 10.0\n",
-      "Some Buddy имеет лучший рейтинг\n",
-      "Ruoy Eman имеет лучший средний балл\n",
+      "False\n",
+      "True\n",
       "6.8\n",
       "10.0\n"
      ]
@@ -57,26 +57,11 @@
     "        student_inf = f'Имя: {self.name} \\nФамилия: {self.surname} \\nСредняя оценка за домашние задания: {self.avegare_grade :.1f} \\nКурсы в процессе изучения: {\",\".join(self.courses_in_progress)} \\nЗавершенные курсы: {\",\".join(self.finished_courses)}'\n",
     "        return student_inf\n",
     "               \n",
-    "    def compare_students(self, other):\n",
+    "    def __lt__(self, other):\n",
     "        self.av_grade()\n",
     "        other.av_grade()\n",
-    "        if self.avegare_grade != other.avegare_grade:\n",
-    "            if self.avegare_grade > other.avegare_grade:\n",
-    "                return f'{self.name} {self.surname} имеет лучший средний балл'\n",
-    "            else:\n",
-    "                return f'{other.name} {other.surname} имеет лучший средний балл'\n",
-    "        else:\n",
-    "            return 'У студентов одинаковый средний балл'\n",
+    "        return self.avegare_grade > other.avegare_grade\n",
     "\n",
-    "    def av_all_students(self, students_list, course):\n",
-    "        av_students_list = []\n",
-    "        for self in students_list:\n",
-    "            if isinstance(self, Student) and course in self.finished_courses or course in self.courses_in_progress:\n",
-    "                self.av_grade()\n",
-    "                if self.avegare_grade != 0:\n",
-    "                    av_students_list.append(self.avegare_grade)\n",
-    "        sum_st_list = sum(av_students_list) / len(av_students_list) \n",
-    "        return round(sum_st_list, 1)\n",
     "\n",
     "class Mentor:\n",
     "    def __init__(self, name, surname):\n",
@@ -127,26 +112,31 @@
     "        lecturer_inf = f'Имя: {self.name} \\nФамилия: {self.surname} \\nСредняя оценка за лекции: {self.avegare_grade}'\n",
     "        return lecturer_inf\n",
     "\n",
-    "    def compare_lecturer(self, other):\n",
+    "    def __lt__(self, other):\n",
     "        self.av_grades()\n",
     "        other.av_grades()\n",
-    "        if self.avegare_grade != other.avegare_grade:        \n",
-    "            if self.avegare_grade > other.avegare_grade:\n",
-    "                return f'{self.name} {self.surname} имеет лучший рейтинг'\n",
-    "            else:\n",
-    "                return f'{other.name} {other.surname} имеет лучший рейтинг'\n",
-    "        else:\n",
-    "            return 'У лекторов рaвный рейтинг'\n",
+    "        return self.avegare_grade > other.avegare_grade\n",
     "\n",
-    "    def av_all_lectures(self, lectures_list, course):\n",
-    "        av_lectures_list = []\n",
-    "        for self in lectures_list:\n",
-    "            if isinstance(self, Lecturer) and course in self.courses_attached:\n",
-    "                self.av_grades()\n",
-    "                if self.avegare_grade != 0:\n",
-    "                    av_lectures_list.append(self.avegare_grade)\n",
-    "        sum_lr_list = sum(av_lectures_list) / len(av_lectures_list) \n",
-    "        return round(sum_lr_list, 1)\n",
+    "\n",
+    "def av_all_students(students_list, course):\n",
+    "    av_students_list = []\n",
+    "    for student in students_list:\n",
+    "        if isinstance(student, Student) and course in student.finished_courses or course in student.courses_in_progress:\n",
+    "            student.av_grade()\n",
+    "            if student.avegare_grade != 0:\n",
+    "                av_students_list.append(student.avegare_grade)\n",
+    "    sum_st_list = sum(av_students_list) / len(av_students_list) \n",
+    "    return round(sum_st_list, 1) \n",
+    "\n",
+    "def av_all_lectures(lectures_list, course):\n",
+    "    av_lectures_list = []\n",
+    "    for lecturer in lectures_list:\n",
+    "        if isinstance(lecturer, Lecturer) and course in lecturer.courses_attached:\n",
+    "            lecturer.av_grades()\n",
+    "            if lecturer.avegare_grade != 0:\n",
+    "                av_lectures_list.append(lecturer.avegare_grade)\n",
+    "    sum_lr_list = sum(av_lectures_list) / len(av_lectures_list) \n",
+    "    return round(sum_lr_list, 1)\n",
     "\n",
     "\n",
     "best_student = Student('Ruoy', 'Eman', 'your_gender')\n",
@@ -191,14 +181,14 @@
     "print(cool_reviewer)\n",
     "print(cool_lecturer)\n",
     "\n",
-    "print(some_lecturer.compare_lecturer(cool_lecturer))\n",
-    "print(best_student.compare_students(worst_student))\n",
+    "print(cool_lecturer > some_lecturer)\n",
+    "print(worst_student > best_student)\n",
     "\n",
     "students_list = [best_student, worst_student]\n",
     "lectures_list = [some_lecturer, cool_lecturer]\n",
     "\n",
-    "print(best_student.av_all_students(students_list, 'Python'))\n",
-    "print(some_lecturer.av_all_lectures(lectures_list, 'Python'))"
+    "print(av_all_students(students_list, 'Python'))\n",
+    "print(av_all_lectures(lectures_list, 'Python'))"
    ]
   }
  ],
